--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/simonmcmanus/url-builder",
   "devDependencies": {
-    "mocha": "^1.19.0",
+    "mocha": "*",
     "should": "*"
   }
 }
