chore: add prettier and reformat files; add git ignore

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/simonmcmanus/url-builder",
   "devDependencies": {
     "mocha": "*",
+    "prettier": "^1.19.1",
     "should": "*"
   }
 }
