chore: add pretty quick to reformat on each commit

--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "husky": "^4.0.7",
     "mocha": "*",
     "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1",
     "should": "*"
   },
   "husky": {
     "hooks": {
+      "pre-commit": "pretty-quick --staged",
       "pre-push": "npm test"
     }
   }
